# my-note-book

./: .coverage  .editorconfig  .env.example  .gemini.md  .gitignore  .migration-backup-20251231_102844.txt  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  MIGRATION_COMPLETE.md  README.md  SKILLS_GUIDE.md  SPRINT-3-COMPLETION-REPORT.md  aboutme.md  alembic.ini  coverage.xml  demo_run.py  docker-compose.yml  main.py  migrate_docs.py  mypy.ini  nginx.conf  package-lock.json  package.json  pytest.ini  rules.md  view_data.py  构想.md
backend/: .env.example  .gitignore  Dockerfile  README.md  create_news_table.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f0fc9a8db18_add_agent_memory_model.py  20260112111525_create_news_articles_table.py  20260112120000_add_image_fields_to_news_articles.py  20260120145301_add_blog_posts_table.py  576dc78c2849_initial_core_models.py  59504f772b41_add_expires_at_to_memory.py  7dc4611c3c5f_create_users_and_sessions_tables.py  91d7611ac274_add_role_to_user.py  af7af7cf65af_add_content_models.py
backend/config/: config.ini  config_glm.ini
backend/migrations/: env.py
backend/migrations/versions/: ddbcd4cd4d4f_create_users_table.py
backend/requirements/: base.txt
backend/src/: __init__.py  database.py  debug_db_path.py  init_db_script.py  main.py  test_news_save.py  test_rss.py
backend/src/agents/: __init__.py  base.py  life_agent.py  life_secretary.py  manager.py  (+9 more)
backend/tests/: TESTING_GUIDE.md  __init__.py  conftest.py  test_api_integration.py  test_auth.py
(+707 files in other folders)
