[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-life-assistant-backend"
version = "2.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "python-dotenv"
]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.md"]
